[gd_scene load_steps=16 format=1]

[ext_resource path="res://Scripts/stage.gd" type="Script" id=1]
[ext_resource path="res://Images/Sky.png" type="Texture" id=2]
[ext_resource path="res://Images/feuille.png" type="Texture" id=3]
[ext_resource path="res://Images/SpotLight.png" type="Texture" id=4]
[ext_resource path="res://tileset.tres" type="TileSet" id=5]
[ext_resource path="res://moving_platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://seesaw.tscn" type="PackedScene" id=7]
[ext_resource path="res://drone.tscn" type="PackedScene" id=8]
[ext_resource path="res://player1.tscn" type="PackedScene" id=9]
[ext_resource path="res://player2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Images/light.png" type="Texture" id=11]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "float ha( float n ) {return fract(sin(n)*758);}

float no( vec3 x ) {
	vec3 p = floor(x);
	vec3 f = fract(x); 
	float n = p.x + p.y*57.0 + p.z*800.0;
	float res = mix(mix(mix( ha(n+  0.0), ha(n+  1.0),f.x), mix( ha(n+ 57.0), ha(n+ 58.0),f.x),f.y),
	mix(mix( ha(n+800.0), ha(n+801.0),f.x), mix( ha(n+857.0), ha(n+858.0),f.x),f.y),f.z);
	return res;}

float fbm( vec3 p ) {
	float f = 0.3*cos(TIME*0.03);
	f += 0.50000*no( p );
	p = p*2.02;
	f -= 0.25000*no( p );
	p = p*2.03;
	f += 0.12500*no( p );
	p = p*2.01;
	f += 0.06250*no( p );
	p = p*2.04;
	f -= 0.03125*no( p );
	return f/0.984375;}

float cloud(vec3 p) {
	p-=fbm(vec3(p.x,p.y,0.0)*0.27)*2.27;
	float a = 0.0;
	a-=fbm(p*3.0)*2.2-1.1;
	if (a<0.0) { a = 0.0; a = a * a; }
	return a; }

vec2 position = vec2(1) - UV;
position.y+=0.2;
vec2 coord= vec2((position.x-0.5)/position.y,1.0/(position.y+0.2));
coord += TIME*0.1+1000.0;
float q = cloud(vec3(coord*1.0,0.222));
vec3 col = vec3(0.3,0.3,0.5) + vec3(0.5*q,0.5*q,0.5*q);
COLOR = vec4( col, 0.5);",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../CanvasModulate:color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.6875, 0.631901, 0.553223, 1 ), Color( 0.359375, 0.329149, 0.286377, 1 ), Color( 0.371094, 0.26122, 0.227585, 1 ) ]
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 35.3699, 137.398, -130, 20, 0, 0, 0, 0, 120, 300, 0, 0, 0, 0, 280, 430, -108.794, 5.88076, -11.7615, 11.7615, 640, 590, -8.16228, 42.1718, 12.2434, -23.1265, 870, 500, 41.6899, 19.7133, -36.6449, -26.0333, 780, 380, 19.8476, -7.35095, -22.7879, 4.41057, 580, 390, -2.50114, -47.7658, 1.36038, 65.2982, 540, 450, 0, 0, 0, 0, 700, 590 )
}

[node name="stage" type="Node"]

script/script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]

transform/pos = Vector2( 652.372, 590 )
transform/scale = Vector2( 1.95097, 1.4699 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud" type="TextureFrame" parent="."]

visibility/visible = false
material/material = SubResource( 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -347.0
margin/top = -166.0
margin/right = 1651.0
margin/bottom = 1344.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Fatality" type="Node" parent="."]

editor/display_folded = true

[node name="CanvasFatality" type="AnimationPlayer" parent="Fatality"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/CanvasModulateFatality = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Thunder" type="Sprite" parent="Fatality"]

visibility/visible = false
transform/pos = Vector2( 0, 765 )
transform/scale = Vector2( 2.4, 4 )

[node name="Particles2D Left" type="Particles2D" parent="Fatality"]

transform/pos = Vector2( 323.008, 53.2858 )
transform/scale = Vector2( 0.3, 0.3 )
config/amount = 32
config/lifetime = 10.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 1400, 0 )
config/texture = ExtResource( 3 )
params/direction = 30.0
params/spread = 10.0
params/linear_velocity = 400.0
params/spin_velocity = 2.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0

[node name="Particles2D Right" type="Particles2D" parent="Fatality"]

transform/pos = Vector2( 1031.16, 59.9665 )
transform/scale = Vector2( 0.3, 0.3 )
config/amount = 32
config/lifetime = 10.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 1400, 0 )
config/texture = ExtResource( 3 )
params/direction = 320.0
params/spread = 10.0
params/linear_velocity = 400.0
params/spin_velocity = 2.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0

[node name="SpotLight" type="Light2D" parent="Fatality"]

visibility/visible = false
visibility/opacity = 0.5
transform/pos = Vector2( 820, 530 )
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="TimerSpotLight" type="Timer" parent="Fatality/SpotLight"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TileMaps" type="Node" parent="."]

editor/display_folded = true

[node name="TileMap" type="TileMap" parent="TileMaps"]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 393216, 4, 458752, 4, 524288, 4, 589824, 4, 655360, 4, 720896, 4, 786432, 4, 851968, 4, 917504, 4, 983040, 4, 1048576, 4, 1114112, 5, 1179648, 4, 1245184, 4, 1310720, 4, 1376256, 4, 1441792, 4, 1507328, 5, 1572864, 4, 1638400, 4, 1703936, 4, 1769472, 1610612741, 1769507, 4, 1769508, 4, 1769509, 4, 1769510, 4, 1769511, 4, 1769512, 4, 1835043, 1610612741, 1835044, 4, 1835045, 4, 1835046, 4, 1835047, 4, 1835048, 4, 1900578, 536870917, 1900579, 4, 1900580, 4, 1900581, 4, 1900582, 4, 1900583, 4, 1900584, 4, 1966114, 4, 1966115, 4, 1966116, 4, 1966117, 4, 1966118, 4, 1966119, 4, 1966120, 4, 2031650, 1610612741, 2031651, 4, 2031652, 4, 2031653, 4, 2031654, 4, 2031655, 4, 2031656, 4, 2097185, 536870917, 2097186, 4, 2097187, 4, 2097188, 4, 2097189, 4, 2097190, 4, 2097191, 4, 2097192, 4, 2162720, 1610612741, 2162721, 4, 2162722, 4, 2162723, 4, 2162724, 4, 2162725, 4, 2162726, 4, 2162727, 4, 2162728, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap Indestructible" type="TileMap" parent="TileMaps"]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65535, 2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 10, 2, 11, 2, 12, 2, 13, 2, 14, 2, 15, 2, 16, 2, 17, 2, 18, 2, 19, 2, 20, 2, 21, 2, 22, 2, 23, 2, 24, 2, 25, 2, 26, 2, 27, 2, 28, 2, 29, 2, 30, 2, 31, 2, 32, 2, 33, 2, 34, 2, 35, 2, 36, 2, 37, 2, 38, 2, 39, 2, 40, 2, 41, 2, 42, 2, 131071, 2, 65578, 2, 196607, 2, 131114, 2, 262143, 2, 196650, 2, 327679, 2, 262186, 2, 393215, 2, 327722, 2, 458751, 2, 393258, 2, 524287, 2, 458794, 2, 589823, 2, 524330, 2, 655359, 2, 589866, 2, 720895, 2, 655402, 2, 786431, 2, 720938, 2, 851967, 2, 786474, 2, 917503, 2, 852010, 2, 983039, 2, 917546, 2, 1048575, 2, 983082, 2, 1114111, 2, 1048618, 2, 1179647, 2, 1114154, 2, 1245183, 2, 1179690, 2, 1310719, 2, 1245226, 2, 1376255, 2, 1310762, 2, 1441791, 2, 1376298, 2, 1507327, 2, 1441834, 2, 1572863, 2, 1507370, 2, 1638399, 2, 1572906, 2, 1703935, 2, 1638441, 536870915, 1638442, 2, 1769471, 2, 1703941, 536870913, 1703942, 0, 1703943, 0, 1703944, 0, 1703945, 0, 1703946, 0, 1703947, 0, 1703948, 0, 1703949, 1, 1703968, 536870913, 1703969, 0, 1703970, 0, 1703971, 0, 1703972, 0, 1703973, 0, 1703974, 0, 1703975, 0, 1703976, 0, 1703977, 2, 1703978, 2, 1835007, 2, 1769513, 2, 1769514, 2, 1900543, 2, 1835008, 3, 1835035, 20, 1835049, 2, 1835050, 2, 1966079, 2, 1900544, 2, 1900585, 2, 1900586, 2, 2031615, 2, 1966080, 2, 1966081, 3, 1966104, 1610612739, 1966105, 2, 1966106, 1610612738, 1966107, 1610612738, 1966108, 1610612738, 1966109, 2, 1966110, 3, 1966121, 2, 1966122, 2, 2097151, 2, 2031616, 0, 2031617, 0, 2031618, 1, 2031641, 2, 2031645, 2, 2031657, 2, 2031658, 2, 2162687, 2, 2097152, 0, 2097153, 0, 2097154, 0, 2097155, 0, 2097156, 1, 2097166, 0, 2097167, 0, 2097168, 0, 2097177, 2, 2097181, 2, 2097193, 2, 2097194, 2, 2228223, 2, 2162688, 0, 2162689, 0, 2162690, 0, 2162691, 0, 2162692, 0, 2162693, 0, 2162694, 0, 2162695, 0, 2162696, 1, 2162702, 2, 2162703, 2, 2162704, 2, 2162705, 3, 2162713, 2, 2162714, 3, 2162717, 2, 2162729, 2, 2162730, 2, 2293759, 2, 2228224, 2, 2228225, 2, 2228226, 2, 2228227, 2, 2228228, 2, 2228229, 2, 2228230, 2, 2228231, 2, 2228232, 2, 2228233, 2, 2228234, 2, 2228235, 2, 2228236, 2, 2228237, 2, 2228238, 2, 2228239, 2, 2228240, 2, 2228241, 2, 2228242, 2, 2228243, 2, 2228244, 2, 2228245, 3, 2228248, 536870915, 2228249, 2, 2228250, 2, 2228251, 3, 2228253, 2, 2228254, 2, 2228255, 2, 2228256, 2, 2228257, 2, 2228258, 2, 2228259, 2, 2228260, 2, 2228261, 2, 2228262, 2, 2228263, 2, 2228264, 2, 2228265, 2, 2228266, 2, 2359295, 2, 2293760, 2, 2293761, 2, 2293762, 2, 2293763, 2, 2293764, 2, 2293765, 2, 2293766, 2, 2293767, 2, 2293768, 2, 2293769, 2, 2293770, 2, 2293771, 2, 2293772, 2, 2293773, 2, 2293774, 2, 2293775, 2, 2293776, 2, 2293777, 2, 2293778, 2, 2293779, 2, 2293780, 2, 2293781, 2, 2293782, 2, 2293783, 2, 2293784, 2, 2293785, 2, 2293786, 2, 2293787, 2, 2293788, 2, 2293789, 2, 2293790, 2, 2293791, 2, 2293792, 2, 2293793, 2, 2293794, 2, 2293795, 2, 2293796, 2, 2293797, 2, 2293798, 2, 2293799, 2, 2293800, 2, 2293801, 2, 2293802, 2, 2424831, 2, 2359296, 2, 2359297, 2, 2359298, 2, 2359299, 2, 2359300, 2, 2359301, 2, 2359302, 2, 2359303, 2, 2359304, 2, 2359305, 2, 2359306, 2, 2359307, 2, 2359308, 2, 2359309, 2, 2359310, 2, 2359311, 2, 2359312, 2, 2359313, 2, 2359314, 2, 2359315, 2, 2359316, 2, 2359317, 2, 2359318, 2, 2359319, 2, 2359320, 2, 2359321, 2, 2359322, 2, 2359323, 2, 2359324, 2, 2359325, 2, 2359326, 2, 2359327, 2, 2359328, 2, 2359329, 2, 2359330, 2, 2359331, 2, 2359332, 2, 2359333, 2, 2359334, 2, 2359335, 2, 2359336, 2, 2359337, 2, 2359338, 2, 2490367, 2, 2424832, 2, 2424833, 2, 2424834, 2, 2424835, 2, 2424836, 2, 2424837, 2, 2424838, 2, 2424839, 2, 2424840, 2, 2424841, 2, 2424842, 2, 2424843, 2, 2424844, 2, 2424845, 2, 2424846, 2, 2424847, 2, 2424848, 2, 2424849, 2, 2424850, 2, 2424851, 2, 2424852, 2, 2424853, 2, 2424854, 2, 2424855, 2, 2424856, 2, 2424857, 2, 2424858, 2, 2424859, 2, 2424860, 2, 2424861, 2, 2424862, 2, 2424863, 2, 2424864, 2, 2424865, 2, 2424866, 2, 2424867, 2, 2424868, 2, 2424869, 2, 2424870, 2, 2424871, 2, 2424872, 2, 2424873, 2, 2424874, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="props" type="Node" parent="."]

editor/display_folded = true

[node name="moving_platform" parent="props" instance=ExtResource( 6 )]

transform/pos = Vector2( 123.299, 606 )
motion = Vector2( 0, -100 )
cycle = 5.0

[node name="moving_platform1" parent="props" instance=ExtResource( 6 )]

transform/pos = Vector2( 1230, 620 )
motion = Vector2( 0, -100 )
cycle = 5.0

[node name="seesaw" parent="props" instance=ExtResource( 7 )]

transform/pos = Vector2( 494.552, 972.113 )

[node name="enemies" type="Node" parent="."]

editor/display_folded = true

[node name="Path2D" type="Path2D" parent="enemies"]

curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="enemies/Path2D"]

transform/pos = Vector2( -130, 20 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = false
lookahead = 4.0

[node name="Drone" parent="enemies/Path2D/PathFollow2D" instance=ExtResource( 8 )]

[node name="TimerDrone" type="Timer" parent="enemies/Path2D/PathFollow2D"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="TimerDroneAppear" type="Timer" parent="enemies/Path2D/PathFollow2D"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Player" type="Node" parent="."]

editor/display_folded = true

[node name="Player1" parent="Player" instance=ExtResource( 9 )]

transform/pos = Vector2( 400, 780 )

[node name="Player2" parent="Player" instance=ExtResource( 10 )]

transform/pos = Vector2( 1070, 780 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 512.285, 880.572 )
transform/scale = Vector2( 6.91374, 4.82815 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]

visibility/blend_mode = 1
transform/pos = Vector2( 297.643, 1137.41 )
transform/rot = -180.0
transform/scale = Vector2( 100, 100 )
color = Color( 0.69, 0.64, 0.55, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="."]

transform/pos = Vector2( 112.417, 827.78 )
transform/scale = Vector2( -205.51, -236.24 )
enabled = true
editor_only = false
texture = ExtResource( 11 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 0.214844, 0.214844, 0.214844, 1 )
energy = 1.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = true
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Fatality/SpotLight/TimerSpotLight" to="." method="_on_TimerSpotLight_timeout"]

[connection signal="timeout" from="enemies/Path2D/PathFollow2D/TimerDrone" to="." method="_on_TimerDrone_timeout"]

[connection signal="timeout" from="enemies/Path2D/PathFollow2D/TimerDroneAppear" to="." method="_on_TimerDroneAppear_timeout"]


